# Sparkle

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  annotated.html  classes.html  classspk_1_1ActivateObject-members.html  classspk_1_1ActivateObject.html  classspk_1_1ActivateObject__inherit__graph.map  classspk_1_1ActivateObject__inherit__graph.md5  classspk_1_1Application-members.html  classspk_1_1Application.html  classspk_1_1Application_1_1CentralWidget-members.html  classspk_1_1Application_1_1CentralWidget.html  classspk_1_1Application_1_1CentralWidget__coll__graph.map  classspk_1_1Application_1_1CentralWidget__coll__graph.md5  classspk_1_1Application_1_1CentralWidget__inherit__graph.map  classspk_1_1Application_1_1CentralWidget__inherit__graph.md5  classspk_1_1Button-members.html  classspk_1_1Button.html  classspk_1_1Button__coll__graph.map  classspk_1_1Button__inherit__graph.md5  classspk_1_1Camera-members.html  classspk_1_1Camera.html  classspk_1_1CameraComponent-members.html  classspk_1_1CameraComponent.html  classspk_1_1CameraComponent__coll__graph.map  classspk_1_1CameraComponent__coll__graph.md5  classspk_1_1Camera__coll__graph.map  classspk_1_1Camera__coll__graph.md5  classspk_1_1CentralNode-members.html  classspk_1_1CentralNode.html  classspk_1_1Client-members.html  classspk_1_1Client.html  classspk_1_1CollisionModule-members.html  (+819 more)
Soloud/: CMakeLists.txt
Soloud/soloud20200207/contrib/: Configure.cmake
Soloud/src/: main.cpp
Sparkle/: CMakeLists.txt
Sparkle/src/: CMakeLists.txt  sparkle.hpp  spk_basic_functions.cpp  spk_basic_functions.hpp
Sparkle/src/application/: spk_application.cpp  spk_application.hpp  spk_application_handle.cpp  spk_application_handle_message.cpp
Sparkle/src/data_structure/: spk_data_buffer.hpp  spk_pool.hpp  spk_thread_safe_deque.hpp  spk_thread_safe_queue.hpp
Sparkle/src/design_pattern/: spk_activable_object.hpp  spk_event_manager.hpp  spk_notifier.cpp  spk_notifier.hpp  spk_observable_value.hpp  spk_singleton.hpp  spk_state_machine.hpp  spk_tree_node.hpp
Sparkle/src/game_engine/: spk_game_engine.cpp  spk_game_engine.hpp  spk_game_object.cpp  spk_game_object.hpp  spk_mesh.cpp  spk_mesh.hpp  spk_sprite_animator.cpp  spk_sprite_animator.hpp  spk_tilemap.hpp  spk_tilemap2D.cpp  spk_tilemap2D.hpp  spk_tilemap2D_chunk.cpp  spk_tilemap2D_chunk_autotile.cpp  spk_tilemap2D_node.cpp  spk_transform.cpp  spk_transform.hpp
Sparkle/src/graphics/: CMakeLists.txt  spk_color.cpp  spk_color.hpp  spk_font_atlas.cpp  spk_font_atlas.hpp  spk_font_manager.cpp  spk_font_manager.hpp  spk_texture_atlas.cpp  spk_texture_atlas.hpp  spk_texture_manager.cpp  spk_texture_manager.hpp  spk_viewport.cpp  spk_viewport.hpp
Sparkle/src/input/: spk_input.cpp  spk_input.hpp  spk_input_decoder.cpp  spk_input_decoder.hpp  spk_input_mapping.hpp  spk_input_state.cpp  spk_input_state.hpp  spk_keyboard.cpp  spk_keyboard.hpp  spk_keyboard_translator.hpp  spk_mouse.cpp  spk_mouse.hpp
Sparkle/src/math/: spk_matrix4x4.cpp  spk_matrix4x4.hpp  spk_pseudo_random_generator.hpp  spk_quaternion.cpp  spk_quaternion.hpp  spk_random_generator.hpp  spk_vector2.hpp  spk_vector3.hpp
Sparkle/src/miscellaneous/: spk_position_alignment.hpp
Sparkle/src/network/: CMakeLists.txt  spk_client.hpp  spk_message.hpp  spk_network_acceptor.cpp  spk_network_acceptor.hpp  spk_network_client.cpp  spk_network_client.hpp  spk_network_network_object.hpp  spk_network_object.cpp  spk_network_object.hpp  spk_network_server.cpp  spk_network_server.hpp  spk_network_socket.cpp  spk_network_socket.hpp  spk_server.hpp
Sparkle/src/profiler/: spk_imetric.hpp  spk_profiler.cpp  spk_profiler.hpp  spk_time_metric.cpp  spk_time_metric.hpp  spk_trigger_metric.cpp  spk_trigger_metric.hpp
Sparkle/src/system/: spk_chronometer.hpp  spk_time_manager.cpp  spk_time_manager.hpp  spk_time_metrics.hpp  spk_timer.hpp
Sparkle/src/widget/: CMakeLists.txt  spk_basic_widgets.cpp  spk_basic_widgets.hpp  spk_box_constraints.hpp  spk_box_contraints.hpp  spk_button.cpp  spk_button.hpp  spk_frame.cpp  spk_frame.hpp  spk_game_engine_manager.cpp  spk_game_engine_manager.hpp  spk_image_label.cpp  spk_panel.cpp  (+21 more)
checker/: CMakeLists.txt
checker/src/: spk_sfinae_tester.cpp
playground/: CMakeLists.txt  scale_obj.py
playground/include/: action_shooter_controller.hpp  asset_atlas.hpp  buffer_object_collection.hpp  camera.hpp  camera_holder.hpp  camera_manager.hpp  chunk.hpp  chunk_entity.hpp  chunk_renderer.hpp  context.hpp  control_mapper.hpp  debug_overlay.hpp  event.hpp  map_editor.hpp  map_editor_manager.hpp  map_manager.hpp  node.hpp  player.hpp  player_controller.hpp  playground.hpp  shader_atlas.hpp  shape.hpp  texture_manager.hpp  tilemap.hpp  world_manager.hpp
playground/resources/: assets.json  assets_configuration.json  config.json  configuration.json  iconset.pyxel
playground/src/: action_shooter_controller.cpp  blockMain.txt  buffer_object_collection.cpp  camera.cpp  camera_holder.cpp  camera_manager.cpp  chunk.cpp  chunk_entity.cpp  chunk_renderer.cpp  control_mapper.cpp  debug_overlay.cpp  event.cpp  file_converter.cpp  main.cpp  map_editor.cpp  map_editor_manager.cpp  map_manager.cpp  node.cpp  oldMain.cpp  oldMain.txt  player.cpp  player_controller.cpp  shader_atlas.cpp  shape.cpp  shape_renderer.cpp  shape_renderer_painter.cpp  shape_subscriber.cpp  texture_manager.cpp  tilemap.cpp  world_manager.cpp
tests/: CMakeLists.txt  runTest.ps1
tests/data_structure/: CMakeLists.txt  pool_unittest.cpp  threadsafe_queue_unittest.cpp
tests/design_pattern/: activable_object_unittest.cpp  event_manager_unittest.cpp  notifier_unittest.cpp  observable_value_unittest.cpp  singleton_unittest.cpp  state_machine_unittest.cpp  tree_node_unittest.cpp
tests/math/: CMakeLists.txt  matrix4x4_unittest.cpp  perlin_1D_unittest.cpp  perlin_2D_unittest.cpp  perlin_3D_unittest.cpp  pseudo_random_generator_unittest.cpp  quaternion_unittest.cpp  vector2_unittest.cpp  vector3_unittest.cpp
tests/miscellaneous/: json_file_unittest.cpp  json_object_unittest.cpp
(+835 files in other folders)
